// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`AgreementDetails > should match the snapshot (consumer) 1`] = `
<body>
  <div>
    <div
      class="MuiGrid-root MuiGrid-container MuiGrid-spacing-xs-2 css-mhc70k-MuiGrid-root"
    >
      <div
        class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-7 css-uqwprf-MuiGrid-root"
      >
        <section
          class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation1 css-u52cu0-MuiPaper-root"
        >
          <div
            class="MuiStack-root css-jfdv4h-MuiStack-root"
          >
            <h2
              class="MuiTypography-root MuiTypography-h6 css-2ulfj5-MuiTypography-root"
            >
              title
            </h2>
          </div>
          <div
            class="MuiBox-root css-1yuhvjn"
          >
            <div
              class="MuiStack-root css-1sazv7p-MuiStack-root"
            >
              <div
                class="MuiStack-root css-1xcvc1q-MuiStack-root"
              >
                <div
                  class="MuiBox-root css-iuqs4u"
                >
                  <p
                    class="MuiTypography-root MuiTypography-body2 css-e784if-MuiTypography-root"
                  >
                    eserviceField.label
                  </p>
                </div>
                <div
                  class="MuiBox-root css-1rr4qq7"
                >
                  <div
                    class="MuiTypography-root MuiTypography-body2 css-hoiwr4-MuiTypography-root"
                  >
                    <a
                      class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineAlways css-1bhi0za-MuiTypography-root-MuiLink-root"
                      href="/it/fruizione/catalogo-e-service/47f82055-77fd-4efd-8ed6-8a7d3021c879/b79fc9ac-2882-49bd-afd1-71f4284f117c"
                      target="_blank"
                    >
                      Test_15/02/23, eserviceField.versionLabel 1
                    </a>
                  </div>
                </div>
              </div>
              <div
                class="MuiStack-root css-1xcvc1q-MuiStack-root"
              >
                <div
                  class="MuiBox-root css-iuqs4u"
                >
                  <p
                    class="MuiTypography-root MuiTypography-body2 css-e784if-MuiTypography-root"
                  >
                    requestStatusField.label
                  </p>
                </div>
                <div
                  class="MuiBox-root css-1rr4qq7"
                >
                  <div
                    class="MuiTypography-root MuiTypography-body2 css-hoiwr4-MuiTypography-root"
                  >
                    <div
                      class="MuiStack-root css-niqf4j-MuiStack-root"
                    >
                      <div
                        class="MuiStack-root css-niqf4j-MuiStack-root"
                      >
                        <div
                          class="MuiChip-root MuiChip-filled MuiChip-sizeSmall MuiChip-colorSuccess MuiChip-filledSuccess css-113qj4u-MuiChip-root"
                        >
                          <span
                            class="MuiChip-label MuiChip-labelSmall css-wjsjww-MuiChip-label"
                          >
                            status.agreement.ACTIVE
                          </span>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
              <div
                class="MuiStack-root css-1xcvc1q-MuiStack-root"
              >
                <div
                  class="MuiBox-root css-iuqs4u"
                >
                  <p
                    class="MuiTypography-root MuiTypography-body2 css-e784if-MuiTypography-root"
                  >
                    providerField.label
                  </p>
                </div>
                <div
                  class="MuiBox-root css-1rr4qq7"
                >
                  <p
                    class="MuiTypography-root MuiTypography-body2 css-hoiwr4-MuiTypography-root"
                  >
                    Agenzia per L'Italia Digitale
                  </p>
                </div>
              </div>
              <div
                class="MuiStack-root css-1xcvc1q-MuiStack-root"
              >
                <div
                  class="MuiBox-root css-iuqs4u"
                >
                  <p
                    class="MuiTypography-root MuiTypography-body2 css-e784if-MuiTypography-root"
                  >
                    documentationField.label
                  </p>
                </div>
                <div
                  class="MuiBox-root css-1rr4qq7"
                >
                  <div
                    class="MuiTypography-root MuiTypography-body2 css-hoiwr4-MuiTypography-root"
                  >
                    <button
                      class="MuiTypography-root MuiTypography-body2 MuiLink-root MuiLink-underlineHover MuiLink-button css-ird2g-MuiTypography-root-MuiLink-root"
                    >
                      <span
                        class="MuiStack-root css-ae0xht-MuiStack-root"
                      >
                        <svg
                          aria-hidden="true"
                          class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-i4bv87-MuiSvgIcon-root"
                          data-testid="AttachFileIcon"
                          focusable="false"
                          viewBox="0 0 24 24"
                        >
                          <path
                            d="M16.5 6v11.5c0 2.21-1.79 4-4 4s-4-1.79-4-4V5c0-1.38 1.12-2.5 2.5-2.5s2.5 1.12 2.5 2.5v10.5c0 .55-.45 1-1 1s-1-.45-1-1V6H10v9.5c0 1.38 1.12 2.5 2.5 2.5s2.5-1.12 2.5-2.5V5c0-2.21-1.79-4-4-4S7 2.79 7 5v12.5c0 3.04 2.46 5.5 5.5 5.5s5.5-2.46 5.5-5.5V6h-1.5z"
                          />
                        </svg>
                         
                        <span>
                          documentationField.docLabel
                        </span>
                         
                      </span>
                    </button>
                  </div>
                </div>
              </div>
              <hr
                class="MuiDivider-root MuiDivider-fullWidth css-9mgopn-MuiDivider-root"
              />
              <div
                class="MuiBox-root css-0"
              >
                <button
                  class="MuiTypography-root MuiTypography-body2 MuiLink-root MuiLink-underlineHover MuiLink-button css-ird2g-MuiTypography-root-MuiLink-root"
                >
                  <span
                    class="MuiStack-root css-ae0xht-MuiStack-root"
                  >
                    <svg
                      aria-hidden="true"
                      class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-i4bv87-MuiSvgIcon-root"
                      data-testid="FolderIcon"
                      focusable="false"
                      viewBox="0 0 24 24"
                    >
                      <path
                        d="M10 4H4c-1.1 0-1.99.9-1.99 2L2 18c0 1.1.9 2 2 2h16c1.1 0 2-.9 2-2V8c0-1.1-.9-2-2-2h-8l-2-2z"
                      />
                    </svg>
                     
                    <span>
                      attachedDocsButtonLabel
                    </span>
                     
                  </span>
                </button>
              </div>
            </div>
          </div>
        </section>
      </div>
    </div>
    <section
      class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation1 css-u52cu0-MuiPaper-root"
    >
      <div
        class="MuiStack-root css-jfdv4h-MuiStack-root"
      >
        <h2
          class="MuiTypography-root MuiTypography-h6 css-2ulfj5-MuiTypography-root"
        >
          title
        </h2>
        <p
          class="MuiTypography-root MuiTypography-body2 css-r40f8v-MuiTypography-root"
        >
          description
        </p>
      </div>
      <div
        class="MuiBox-root css-1yuhvjn"
      >
        <hr
          class="MuiDivider-root MuiDivider-fullWidth css-1iknwlx-MuiDivider-root"
        />
        <section
          class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation1 css-1od456z-MuiPaper-root"
        >
          <div
            class="MuiStack-root css-jfdv4h-MuiStack-root"
          >
            <h3
              class="MuiTypography-root MuiTypography-sidenav css-37jdci-MuiTypography-root"
            >
              certified.label
            </h3>
            <p
              class="MuiTypography-root MuiTypography-body2 css-r40f8v-MuiTypography-root"
            >
              certified.description
            </p>
          </div>
          <div
            class="MuiBox-root css-1yuhvjn"
          >
            <div
              class="MuiStack-root css-1sazv7p-MuiStack-root"
            />
            <div
              class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation1 MuiCard-root css-8yd19h-MuiPaper-root-MuiCard-root"
            >
              <div
                class="MuiCardHeader-root css-9zb0zf-MuiCardHeader-root"
              >
                <div
                  class="MuiCardHeader-content css-1qbkelo-MuiCardHeader-content"
                >
                  <span
                    class="MuiTypography-root MuiTypography-body1 MuiCardHeader-title css-153kzzj-MuiTypography-root"
                  >
                    noAttributesRequiredAlert.consumer
                  </span>
                </div>
              </div>
            </div>
          </div>
        </section>
        <hr
          class="MuiDivider-root MuiDivider-fullWidth css-1iknwlx-MuiDivider-root"
        />
        <section
          class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation1 css-1od456z-MuiPaper-root"
        >
          <div
            class="MuiStack-root css-jfdv4h-MuiStack-root"
          >
            <h3
              class="MuiTypography-root MuiTypography-sidenav css-37jdci-MuiTypography-root"
            >
              verified.label
            </h3>
            <p
              class="MuiTypography-root MuiTypography-body2 css-r40f8v-MuiTypography-root"
            >
              verified.description
            </p>
          </div>
          <div
            class="MuiBox-root css-1yuhvjn"
          >
            <div
              class="MuiStack-root css-1sazv7p-MuiStack-root"
            />
            <div
              class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation1 MuiCard-root css-8yd19h-MuiPaper-root-MuiCard-root"
            >
              <div
                class="MuiCardHeader-root css-9zb0zf-MuiCardHeader-root"
              >
                <div
                  class="MuiCardHeader-content css-1qbkelo-MuiCardHeader-content"
                >
                  <span
                    class="MuiTypography-root MuiTypography-body1 MuiCardHeader-title css-153kzzj-MuiTypography-root"
                  >
                    noAttributesRequiredAlert.consumer
                  </span>
                </div>
              </div>
            </div>
          </div>
        </section>
        <hr
          class="MuiDivider-root MuiDivider-fullWidth css-1iknwlx-MuiDivider-root"
        />
        <section
          class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation1 css-1od456z-MuiPaper-root"
        >
          <div
            class="MuiStack-root css-jfdv4h-MuiStack-root"
          >
            <h3
              class="MuiTypography-root MuiTypography-sidenav css-37jdci-MuiTypography-root"
            >
              declared.label
            </h3>
            <p
              class="MuiTypography-root MuiTypography-body2 css-r40f8v-MuiTypography-root"
            >
              declared.description
            </p>
          </div>
          <div
            class="MuiBox-root css-1yuhvjn"
          >
            <div
              class="MuiStack-root css-1sazv7p-MuiStack-root"
            />
            <div
              class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation1 MuiCard-root css-8yd19h-MuiPaper-root-MuiCard-root"
            >
              <div
                class="MuiCardHeader-root css-9zb0zf-MuiCardHeader-root"
              >
                <div
                  class="MuiCardHeader-content css-1qbkelo-MuiCardHeader-content"
                >
                  <span
                    class="MuiTypography-root MuiTypography-body1 MuiCardHeader-title css-153kzzj-MuiTypography-root"
                  >
                    noAttributesRequiredAlert.consumer
                  </span>
                </div>
              </div>
            </div>
          </div>
        </section>
      </div>
    </section>
  </div>
</body>
`;

exports[`AgreementDetails > should match the snapshot (producer) 1`] = `
<body>
  <div>
    <div
      class="MuiGrid-root MuiGrid-container MuiGrid-spacing-xs-2 css-mhc70k-MuiGrid-root"
    >
      <div
        class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-7 css-uqwprf-MuiGrid-root"
      >
        <section
          class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation1 css-u52cu0-MuiPaper-root"
        >
          <div
            class="MuiStack-root css-jfdv4h-MuiStack-root"
          >
            <h2
              class="MuiTypography-root MuiTypography-h6 css-2ulfj5-MuiTypography-root"
            >
              title
            </h2>
          </div>
          <div
            class="MuiBox-root css-1yuhvjn"
          >
            <div
              class="MuiStack-root css-1sazv7p-MuiStack-root"
            >
              <div
                class="MuiStack-root css-1xcvc1q-MuiStack-root"
              >
                <div
                  class="MuiBox-root css-iuqs4u"
                >
                  <p
                    class="MuiTypography-root MuiTypography-body2 css-e784if-MuiTypography-root"
                  >
                    eserviceField.label
                  </p>
                </div>
                <div
                  class="MuiBox-root css-1rr4qq7"
                >
                  <div
                    class="MuiTypography-root MuiTypography-body2 css-hoiwr4-MuiTypography-root"
                  >
                    <a
                      class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineAlways css-1bhi0za-MuiTypography-root-MuiLink-root"
                      href="/it/fruizione/catalogo-e-service/47f82055-77fd-4efd-8ed6-8a7d3021c879/b79fc9ac-2882-49bd-afd1-71f4284f117c"
                      target="_blank"
                    >
                      Test_15/02/23, eserviceField.versionLabel 1
                    </a>
                  </div>
                </div>
              </div>
              <div
                class="MuiStack-root css-1xcvc1q-MuiStack-root"
              >
                <div
                  class="MuiBox-root css-iuqs4u"
                >
                  <p
                    class="MuiTypography-root MuiTypography-body2 css-e784if-MuiTypography-root"
                  >
                    requestStatusField.label
                  </p>
                </div>
                <div
                  class="MuiBox-root css-1rr4qq7"
                >
                  <div
                    class="MuiTypography-root MuiTypography-body2 css-hoiwr4-MuiTypography-root"
                  >
                    <div
                      class="MuiStack-root css-niqf4j-MuiStack-root"
                    >
                      <div
                        class="MuiStack-root css-niqf4j-MuiStack-root"
                      >
                        <div
                          class="MuiChip-root MuiChip-filled MuiChip-sizeSmall MuiChip-colorSuccess MuiChip-filledSuccess css-113qj4u-MuiChip-root"
                        >
                          <span
                            class="MuiChip-label MuiChip-labelSmall css-wjsjww-MuiChip-label"
                          >
                            status.agreement.ACTIVE
                          </span>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
              <div
                class="MuiStack-root css-1xcvc1q-MuiStack-root"
              >
                <div
                  class="MuiBox-root css-iuqs4u"
                >
                  <p
                    class="MuiTypography-root MuiTypography-body2 css-e784if-MuiTypography-root"
                  >
                    consumerField.label
                  </p>
                </div>
                <div
                  class="MuiBox-root css-1rr4qq7"
                >
                  <p
                    class="MuiTypography-root MuiTypography-body2 css-hoiwr4-MuiTypography-root"
                  >
                    PagoPa S.p.A.
                  </p>
                </div>
              </div>
              <div
                class="MuiStack-root css-1xcvc1q-MuiStack-root"
              >
                <div
                  class="MuiBox-root css-iuqs4u"
                >
                  <p
                    class="MuiTypography-root MuiTypography-body2 css-e784if-MuiTypography-root"
                  >
                    documentationField.label
                  </p>
                </div>
                <div
                  class="MuiBox-root css-1rr4qq7"
                >
                  <div
                    class="MuiTypography-root MuiTypography-body2 css-hoiwr4-MuiTypography-root"
                  >
                    <button
                      class="MuiTypography-root MuiTypography-body2 MuiLink-root MuiLink-underlineHover MuiLink-button css-ird2g-MuiTypography-root-MuiLink-root"
                    >
                      <span
                        class="MuiStack-root css-ae0xht-MuiStack-root"
                      >
                        <svg
                          aria-hidden="true"
                          class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-i4bv87-MuiSvgIcon-root"
                          data-testid="AttachFileIcon"
                          focusable="false"
                          viewBox="0 0 24 24"
                        >
                          <path
                            d="M16.5 6v11.5c0 2.21-1.79 4-4 4s-4-1.79-4-4V5c0-1.38 1.12-2.5 2.5-2.5s2.5 1.12 2.5 2.5v10.5c0 .55-.45 1-1 1s-1-.45-1-1V6H10v9.5c0 1.38 1.12 2.5 2.5 2.5s2.5-1.12 2.5-2.5V5c0-2.21-1.79-4-4-4S7 2.79 7 5v12.5c0 3.04 2.46 5.5 5.5 5.5s5.5-2.46 5.5-5.5V6h-1.5z"
                          />
                        </svg>
                         
                        <span>
                          documentationField.docLabel
                        </span>
                         
                      </span>
                    </button>
                  </div>
                </div>
              </div>
              <hr
                class="MuiDivider-root MuiDivider-fullWidth css-9mgopn-MuiDivider-root"
              />
              <div
                class="MuiBox-root css-0"
              >
                <button
                  class="MuiTypography-root MuiTypography-body2 MuiLink-root MuiLink-underlineHover MuiLink-button css-ird2g-MuiTypography-root-MuiLink-root"
                >
                  <span
                    class="MuiStack-root css-ae0xht-MuiStack-root"
                  >
                    <svg
                      aria-hidden="true"
                      class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-i4bv87-MuiSvgIcon-root"
                      data-testid="FolderIcon"
                      focusable="false"
                      viewBox="0 0 24 24"
                    >
                      <path
                        d="M10 4H4c-1.1 0-1.99.9-1.99 2L2 18c0 1.1.9 2 2 2h16c1.1 0 2-.9 2-2V8c0-1.1-.9-2-2-2h-8l-2-2z"
                      />
                    </svg>
                     
                    <span>
                      attachedDocsButtonLabel
                    </span>
                     
                  </span>
                </button>
              </div>
            </div>
          </div>
        </section>
      </div>
    </div>
    <section
      class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation1 css-u52cu0-MuiPaper-root"
    >
      <div
        class="MuiStack-root css-jfdv4h-MuiStack-root"
      >
        <h2
          class="MuiTypography-root MuiTypography-h6 css-2ulfj5-MuiTypography-root"
        >
          title
        </h2>
        <p
          class="MuiTypography-root MuiTypography-body2 css-r40f8v-MuiTypography-root"
        >
          description
        </p>
      </div>
      <div
        class="MuiBox-root css-1yuhvjn"
      >
        <hr
          class="MuiDivider-root MuiDivider-fullWidth css-1iknwlx-MuiDivider-root"
        />
        <section
          class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation1 css-1od456z-MuiPaper-root"
        >
          <div
            class="MuiStack-root css-jfdv4h-MuiStack-root"
          >
            <h3
              class="MuiTypography-root MuiTypography-sidenav css-37jdci-MuiTypography-root"
            >
              certified.label
            </h3>
            <p
              class="MuiTypography-root MuiTypography-body2 css-r40f8v-MuiTypography-root"
            >
              certified.description
            </p>
          </div>
          <div
            class="MuiBox-root css-1yuhvjn"
          >
            <div
              class="MuiStack-root css-1sazv7p-MuiStack-root"
            />
            <div
              class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation1 MuiCard-root css-8yd19h-MuiPaper-root-MuiCard-root"
            >
              <div
                class="MuiCardHeader-root css-9zb0zf-MuiCardHeader-root"
              >
                <div
                  class="MuiCardHeader-content css-1qbkelo-MuiCardHeader-content"
                >
                  <span
                    class="MuiTypography-root MuiTypography-body1 MuiCardHeader-title css-153kzzj-MuiTypography-root"
                  >
                    noAttributesRequiredAlert.provider
                  </span>
                </div>
              </div>
            </div>
          </div>
        </section>
        <hr
          class="MuiDivider-root MuiDivider-fullWidth css-1iknwlx-MuiDivider-root"
        />
        <section
          class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation1 css-1od456z-MuiPaper-root"
        >
          <div
            class="MuiStack-root css-jfdv4h-MuiStack-root"
          >
            <h3
              class="MuiTypography-root MuiTypography-sidenav css-37jdci-MuiTypography-root"
            >
              verified.label
            </h3>
            <p
              class="MuiTypography-root MuiTypography-body2 css-r40f8v-MuiTypography-root"
            >
              verified.description
            </p>
          </div>
          <div
            class="MuiBox-root css-1yuhvjn"
          >
            <div
              class="MuiStack-root css-1sazv7p-MuiStack-root"
            />
            <div
              class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation1 MuiCard-root css-8yd19h-MuiPaper-root-MuiCard-root"
            >
              <div
                class="MuiCardHeader-root css-9zb0zf-MuiCardHeader-root"
              >
                <div
                  class="MuiCardHeader-content css-1qbkelo-MuiCardHeader-content"
                >
                  <span
                    class="MuiTypography-root MuiTypography-body1 MuiCardHeader-title css-153kzzj-MuiTypography-root"
                  >
                    noAttributesRequiredAlert.provider
                  </span>
                </div>
              </div>
            </div>
          </div>
        </section>
        <hr
          class="MuiDivider-root MuiDivider-fullWidth css-1iknwlx-MuiDivider-root"
        />
        <section
          class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation1 css-1od456z-MuiPaper-root"
        >
          <div
            class="MuiStack-root css-jfdv4h-MuiStack-root"
          >
            <h3
              class="MuiTypography-root MuiTypography-sidenav css-37jdci-MuiTypography-root"
            >
              declared.label
            </h3>
            <p
              class="MuiTypography-root MuiTypography-body2 css-r40f8v-MuiTypography-root"
            >
              declared.description
            </p>
          </div>
          <div
            class="MuiBox-root css-1yuhvjn"
          >
            <div
              class="MuiStack-root css-1sazv7p-MuiStack-root"
            />
            <div
              class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation1 MuiCard-root css-8yd19h-MuiPaper-root-MuiCard-root"
            >
              <div
                class="MuiCardHeader-root css-9zb0zf-MuiCardHeader-root"
              >
                <div
                  class="MuiCardHeader-content css-1qbkelo-MuiCardHeader-content"
                >
                  <span
                    class="MuiTypography-root MuiTypography-body1 MuiCardHeader-title css-153kzzj-MuiTypography-root"
                  >
                    noAttributesRequiredAlert.provider
                  </span>
                </div>
              </div>
            </div>
          </div>
        </section>
      </div>
    </section>
  </div>
</body>
`;
